--- a/style.css
+++ b/style.css
@@ -5,18 +5,22 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.header{
+header{
     position: fixed;
     display: flex;
     justify-content: space-between;
     background-color: white;
     height: 100px;
-    width: 100%;
+    width: 100vw;
     border-bottom: 2px solid lightgrey;
 }
 
 .logo_starbucks_img{
     cursor: pointer;
+}
+
+.menu{
+    border: transparent;
 }
 
 .menu :hover{
@@ -113,10 +117,7 @@ main .main_izquierda{
     width: 40%;
     background: linear-gradient(180deg, rgba(12,102,74,1) 35%, rgba(27,60,52,1) 100%);
     margin-top: 100px;
-}
-
-
-.main_izquierda {
+    padding-bottom: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,7 +128,7 @@ main .main_izquierda{
     max-width: 300px;
     width: 100%;
     height: auto;
-    margin: 0px 50px;
+    margin: 0px 50 px;
 }
 
 .main_izquierda p{
@@ -172,11 +173,12 @@ main .main_izquierda{
 
 .mano_celular_img{
     display: flex;
-    max-width: 65%;
+    position: absolute;
+    bottom: 100px;
+    max-width: 40%;
     align-items: flex-end;
     justify-content: flex-end;
     align-self: flex-end;
-    
 }
 
 
@@ -252,7 +254,6 @@ main .main_derecha{
 
 .main_derecha1-2 img{
     max-width: 30%;
-
 }
 
 .bebida_cumpleaños{
@@ -363,7 +364,7 @@ footer img{
     border-bottom: 1px solid grey;
 }
 
-footer .fotter{
+.fotter{
     display: flex;
     flex-direction: row;
     justify-content: center;
